fix: ignore unnecessary sonarcloud test file issues and rename fallback members for better understanding

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -33,6 +33,17 @@ sonar.go.coverage.reportPaths=cache/coverage/*
 sonar.go.golangci-lint.reportPaths=cache/checkstyle/checkstyle.xml
 
 # Exclude files
-sonar.exclusions=**/third_party,docs/**,changelog/**,**/package.json,**/rollup.config.js,CHANGELOG.md,deployments/**,tests/**,vendor/**,vendor-bin/**,README.md,**/mocks/**,/protogen/**,services/search/pkg/query/kql/dictionary_gen.go
-sonar.coverage.exclusions=**/*_test.go,**mocks/**,/protogen/**,services/search/pkg/query/kql/dictionary_gen.go
+sonar.exclusions=**/third_party,docs/**,changelog/**,**/package.json,**/rollup.config.js,CHANGELOG.md,deployments/**,tests/**,vendor/**,vendor-bin/**,README.md,**/mocks/**,/protogen/**,**/*_gen.go
+sonar.coverage.exclusions=**/*_test.go,**mocks/**,/protogen/**,**/*_gen.go
 sonar.cpd.exclusions=**/*_test.go,**/revaconfig/**,services/settings/pkg/store/defaults/defaults.go
+
+# Rule exclusions
+sonar.issue.ignore.multicriteria=g1,g2
+
+# Ignore "Define a constant instead of duplicating this literal" rule for tests
+sonar.issue.ignore.multicriteria.g1.ruleKey=go:S1192
+sonar.issue.ignore.multicriteria.g1.resourceKey=**/*_test.go
+
+# Ignore "Rename function XXX to match the regular expression ^(_|[a-zA-Z0-9]+)$" rule for tests
+sonar.issue.ignore.multicriteria.g2.ruleKey=go:S100
+sonar.issue.ignore.multicriteria.g2.resourceKey=**/*_test.go
