[full-ci] enhancement: allow ocis to provide custom web applications (#8523)
* enhancement: allow ocis to provide custom web applications

* enhancement: add an option to disable web apps

* test: add default logger tests

* test: add app loading tests

* test: add asset server tests

* enhancement: make use of dedicated app conf file and app asset paths

* enhancement: adjust asset locations and deprecate WEB_ASSET_PATH

* enhancement: get rid of default logger and use the service level logger instead

* Apply suggestions from code review

Co-authored-by: Benedikt Kulmann <benedikt@kulmann.biz>
Co-authored-by: kobergj <juliankoberg@googlemail.com>

* enhancement: use basename as app id

* Apply suggestions from code review

Co-authored-by: Martin <github@diemattels.at>

* enhancement: use afero as fs abstraction

* enhancement: simplify logo upload

* enhancement: make use of introductionVersion field annotations

---------

Co-authored-by: Benedikt Kulmann <benedikt@kulmann.biz>
Co-authored-by: kobergj <juliankoberg@googlemail.com>
Co-authored-by: Martin <github@diemattels.at>

--- a/services/_includes/web-config-example.yaml
+++ b/services/_includes/web-config-example.yaml
@@ -67,7 +67,9 @@ http:
     - X-HTTP-Method-Override
     allow_credentials: true
 asset:
-  path: /var/lib/ocis/web/assets
+  path: ""
+  core_path: /var/lib/ocis/web/assets/core
+  apps_path: /var/lib/ocis/web/assets/apps
 file: ""
 web:
   theme_server: https://localhost:9200
@@ -142,6 +144,7 @@ web:
     styles: []
     scripts: []
     custom_translations: []
+apps: {}
 token_manager:
   jwt_secret: ""
 gateway_addr: com.owncloud.api.gateway
