chore: bump bingo dependencies

--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -18,17 +18,17 @@ CALENS="${GOBIN}/calens-v0.4.0"
 
 GO_LICENSES="${GOBIN}/go-licenses-v1.5.0"
 
-GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.51.2"
+GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.56.2"
 
 GOVULNCHECK="${GOBIN}/govulncheck-v1.0.1"
 
-HUGO="${GOBIN}/hugo-v0.115.2"
+HUGO="${GOBIN}/hugo-v0.123.7"
 
 MOCKERY="${GOBIN}/mockery-v2.40.2"
 
-MUTAGEN="${GOBIN}/mutagen-v0.13.1"
+MUTAGEN="${GOBIN}/mutagen-v0.14.0"
 
-PIGEON="${GOBIN}/pigeon-v1.1.1-0.20230620190048-b0211796baa8"
+PIGEON="${GOBIN}/pigeon-v1.2.1"
 
 PROTOC_GEN_DOC="${GOBIN}/protoc-gen-doc-v1.5.1"
 
