[full-ci] Backport Go1.22 to stable 4 (#8597)
* chore: bump go to 1.22

* bump bingo dependencies

Signed-off-by: jkoberg <jkoberg@owncloud.com>

* test: whitelist mod replace directives

* fix: changelog

---------

Signed-off-by: jkoberg <jkoberg@owncloud.com>
Co-authored-by: Florian Schade <f.schade@icloud.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -45,6 +45,9 @@ linters:
 linters-settings:
   gocyclo:
     min-complexity: 35 # there are some func unforuntately who need this - should we refactor them?
+  gomoddirectives:
+    replace-allow-list:
+      - github.com/cs3org/go-cs3apis
 
 severity:
   default-severity: error
