--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=owncloud_ocis
 sonar.organization=owncloud-1
 sonar.projectName=ocis
-sonar.projectVersion=5.0.0-rc.6
+sonar.projectVersion=5.0.0
 sonar.host.url=https://sonarcloud.io
 
 # =====================================================
