--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -35,7 +35,7 @@ sonar.go.golangci-lint.reportPaths=cache/checkstyle/checkstyle.xml
 # Exclude files
 sonar.exclusions=**/third_party,docs/**,changelog/**,**/package.json,**/rollup.config.js,CHANGELOG.md,deployments/**,tests/**,vendor/**,vendor-bin/**,README.md,**/mocks/**,/protogen/**,**/*_gen.go
 sonar.coverage.exclusions=**/*_test.go,**mocks/**,/protogen/**,**/*_gen.go
-sonar.cpd.exclusions=**/*_test.go,**/revaconfig/**,services/settings/pkg/store/defaults/defaults.go
+sonar.cpd.exclusions=**/defaultconfig.go,**/*_test.go,**/revaconfig/**,services/settings/pkg/store/defaults/defaults.go
 
 # Rule exclusions
 sonar.issue.ignore.multicriteria=g1,g2
