add test for downloading resouces by user when auto sync is enabled

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -101,6 +101,7 @@ default:
         - OCSContext:
         - PublicWebDavContext:
         - GraphContext:
+        - SharingNgContext:
 
     apiGraph:
       paths:
