--- a/docs/helpers/extended_vars.yaml
+++ b/docs/helpers/extended_vars.yaml
@@ -16,8 +16,16 @@ variables:
   description: ""
   do_ignore: true
 - rawname: MICRO_LOG_LEVEL
-  path: ocis-pkg/log/log.go:31
+  path: ocis-pkg/log/log.go:36
   foundincode: true
+  name: MICRO_LOG_LEVEL
+  type: ""
+  default_value: ""
+  description: ""
+  do_ignore: false
+- rawname: MICRO_LOG_LEVEL
+  path: ocis-pkg/log/log.go:31
+  foundincode: false
   name: MICRO_LOG_LEVEL
   type: string
   default_value: Error
@@ -26,12 +34,20 @@ variables:
   do_ignore: false
 - rawname: MICRO_LOG_LEVEL
   path: ocis-pkg/log/log.go:35
-  foundincode: true
+  foundincode: false
   name: MICRO_LOG_LEVEL
   type: ""
   default_value: ""
   description: ""
   do_ignore: true
+- rawname: MICRO_LOG_LEVEL
+  path: ocis-pkg/log/log.go:32
+  foundincode: true
+  name: MICRO_LOG_LEVEL
+  type: ""
+  default_value: ""
+  description: ""
+  do_ignore: false
 - rawname: _registryEnv
   path: ocis-pkg/registry/registry.go:114
   foundincode: true
@@ -44,6 +60,14 @@ variables:
     on supervision of ownCloud Support.'
   do_ignore: false
 - rawname: _registryAddressEnv
+  path: ocis-pkg/registry/registry.go:118
+  foundincode: true
+  name: MICRO_REGISTRY_ADDRESS
+  type: ""
+  default_value: ""
+  description: ""
+  do_ignore: true
+- rawname: _registryAddressEnv
   path: ocis-pkg/natsjsregistry/registry.go:145
   foundincode: true
   name: MICRO_REGISTRY_ADDRESS
@@ -52,14 +76,6 @@ variables:
   description: The bind address of the internal go micro framework. Only change on
     supervision of ownCloud Support.
   do_ignore: false
-- rawname: _registryAddressEnv
-  path: ocis-pkg/registry/registry.go:118
-  foundincode: true
-  name: MICRO_REGISTRY_ADDRESS
-  type: ""
-  default_value: ""
-  description: ""
-  do_ignore: true
 - rawname: _registryPasswordEnv
   path: ocis-pkg/natsjsregistry/registry.go:163
   foundincode: true
@@ -96,6 +112,14 @@ variables:
   description: The default directory location for config files. See the General Info
     section in the documentation for more details on defaults.
   do_ignore: false
+- rawname: RUN_CMD_TEST
+  path: internal/testenv/test.go:33
+  foundincode: true
+  name: RUN_CMD_TEST
+  type: ""
+  default_value: ""
+  description: ""
+  do_ignore: true
 - rawname: parts[0]
   path: ocis-pkg/config/envdecode/envdecode.go:382
   foundincode: true
