add test for downloading resouces by user when auto sync is disabled

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -298,6 +298,8 @@ default:
         - FeatureContext: *common_feature_context_params
         - WebDavPropertiesContext:
         - FilesVersionsContext:
+        - SharingNgContext:
+        - SettingsContext:
 
     apiLocks:
       paths:
