--- a/services/userlog/Makefile
+++ b/services/userlog/Makefile
@@ -44,7 +44,7 @@ l10n-push:
 
 .PHONY: l10n-read
 l10n-read: $(GO_XGETTEXT)
-	go-xgettext -o $(OUTPUT_DIR)/userlog.pot --keyword=Template -s pkg/service/templates.go
+	go-xgettext -o $(OUTPUT_DIR)/userlog.pot --keyword=l10n.Template -s pkg/service/templates.go
 
 .PHONY: l10n-write
 l10n-write:
