--- a/services/_includes/graph-config-example.yaml
+++ b/services/_includes/graph-config-example.yaml
@@ -142,4 +142,4 @@ service_account:
   service_account_id: ""
   service_account_secret: ""
 files_sharing:
-  enable_resharing: true
+  enable_resharing: false
