--- a/services/graph/.mockery.yaml
+++ b/services/graph/.mockery.yaml
@@ -7,6 +7,7 @@ packages:
         config:
             dir: "mocks"
         interfaces:
+            BaseGraphProvider:
             DrivesDriveItemProvider:
             DriveItemPermissionsProvider:
             HTTPClient:
