--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -47,3 +47,6 @@ sonar.issue.ignore.multicriteria.g1.resourceKey=**/*_test.go
 # Ignore "Rename function XXX to match the regular expression ^(_|[a-zA-Z0-9]+)$" rule for tests
 sonar.issue.ignore.multicriteria.g2.ruleKey=go:S100
 sonar.issue.ignore.multicriteria.g2.resourceKey=**/*_test.go
+
+# Logging
+sonar.log.level=INFO
