fix(linter): Increase limit for interfacebloat linter
The default (10) seems somewhat low.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,6 +50,8 @@ linters-settings:
       - github.com/go-micro/plugins/v4/store/nats-js-kv
       - github.com/studio-b12/gowebdav
       - github.com/egirna/icap-client
+  interfacebloat:
+    max: 15
 
 severity:
   default-severity: error
