check email in the search sharee request

--- a/tests/acceptance/config/behat-core.yml
+++ b/tests/acceptance/config/behat-core.yml
@@ -78,6 +78,7 @@ default:
       contexts:
         - FeatureContext: *common_feature_context_params
         - ShareesContext:
+        - OcisConfigContext:
 
     coreApiShareManagementToShares:
       paths:
