web update commit

--- a/.drone.env
+++ b/.drone.env
@@ -1,3 +1,3 @@
 # The test runner source for UI tests
-WEB_COMMITID=9b9616b8429432002d06c4a2c8f252cbe08fb735
-WEB_BRANCH=changeResponseCodeDelete
+WEB_COMMITID=0bb14f66579a60e73175b21e0bf142815f777f0b
+WEB_BRANCH=master
