--- a/.drone.env
+++ b/.drone.env
@@ -1,3 +1,3 @@
 # The test runner source for UI tests
-WEB_COMMITID=9b9616b8429432002d06c4a2c8f252cbe08fb735
-WEB_BRANCH=changeResponseCodeDelete
+WEB_COMMITID=bef31c1ec078381b64d2dfedd47d954ad1786790
+WEB_BRANCH=master
