--- a/.drone.env
+++ b/.drone.env
@@ -1,3 +1,3 @@
 # The test runner source for UI tests
-WEB_COMMITID=9b9616b8429432002d06c4a2c8f252cbe08fb735
-WEB_BRANCH=changeResponseCodeDelete
+WEB_COMMITID=70cea7ca54a2d279a1f4c5aec070fb82850aca8e
+WEB_BRANCH=master
