changed given statement of sharing link in api antivirus feature file

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -208,6 +208,7 @@ default:
         - SettingsContext:
         - OcisConfigContext:
         - PublicWebDavContext:
+        - SharingNgContext:
 
     apiDownloads:
       paths:
