fix: consolidate security related headers - drop middleware.Secure

--- a/deployments/examples/ocis_wopi/config/ocis/csp.yaml
+++ b/deployments/examples/ocis_wopi/config/ocis/csp.yaml
@@ -7,6 +7,8 @@ directives:
     - '''none'''
   font-src:
     - '''self'''
+  frame-ancestors:
+    - '''none'''
   frame-src:
     - '''self'''
     - 'https://embed.diagrams.net/'
