feat: add OCIS_LOG_LEVEL to .env and also to the app-providers

--- a/deployments/examples/ocis_wopi/.env
+++ b/deployments/examples/ocis_wopi/.env
@@ -22,6 +22,8 @@ ADMIN_PASSWORD=
 # The demo users should not be created on a production instance
 # because their passwords are public. Defaults to "false".
 DEMO_USERS=
+# Log level for OCIS_DOCKER_TAG
+OCIS_LOG_LEVEL=
 
 ### Wopi server settings ###
 # cs3org wopi server version. Defaults to "v8.3.3"
