--- a/deployments/examples/ocis_wopi/docker-compose.yml
+++ b/deployments/examples/ocis_wopi/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "${DOCKER_SOCKET_PATH:-/var/run/docker.sock}:/var/run/docker.sock:ro"
       - "certs:/certs"
     labels:
       - "traefik.enable=${TRAEFIK_DASHBOARD:-false}"
@@ -47,7 +47,7 @@ services:
       - "traefik.http.routers.traefik.tls.certresolver=http"
       - "traefik.http.routers.traefik.service=api@internal"
     logging:
-      driver: "local"
+      driver: ${LOG_DRIVER:-local}
     restart: always
 
   ocis:
@@ -101,7 +101,7 @@ services:
       - "traefik.http.routers.ocis.service=ocis"
       - "traefik.http.services.ocis.loadbalancer.server.port=9200"
     logging:
-      driver: "local"
+      driver: ${LOG_DRIVER:-local}
     restart: always
 
   ocis-appprovider-collabora:
@@ -129,17 +129,18 @@ services:
     volumes:
       - ocis-config:/etc/ocis
     logging:
-      driver: "local"
+      driver: ${LOG_DRIVER:-local}
     restart: always
+    depends_on:
+      ocis:
+        condition: service_started
+      collabora:
+        condition: service_healthy
 
   ocis-appprovider-onlyoffice:
     image: owncloud/ocis:${OCIS_DOCKER_TAG:-latest}
     networks:
       ocis-net:
-    user: "0" # needed for apk add in entrypoint script
-    entrypoint:
-      - /bin/sh
-      - /entrypoint-override.sh
     #command: app-provider server
     environment:
       # use the internal service name of the gateway
@@ -159,11 +160,15 @@ services:
       # share the registry with the ocis container
       MICRO_REGISTRY_ADDRESS: ocis:9233
     volumes:
-      - ./config/ocis-appprovider-onlyoffice/entrypoint-override.sh:/entrypoint-override.sh
       - ocis-config:/etc/ocis
     logging:
-      driver: "local"
+      driver: ${LOG_DRIVER:-local}
     restart: always
+    depends_on:
+      ocis:
+        condition: service_started
+      onlyoffice:
+        condition: service_healthy
 
   wopiserver:
     image: cs3org/wopiserver:${WOPISERVER_DOCKER_TAG:-v10.3.0}
@@ -188,7 +193,7 @@ services:
       - "traefik.http.routers.wopiserver.service=wopiserver"
       - "traefik.http.services.wopiserver.loadbalancer.server.port=8880"
     logging:
-      driver: "local"
+      driver: ${LOG_DRIVER:-local}
     restart: always
 
   collabora:
@@ -211,8 +216,10 @@ services:
       - "traefik.http.routers.collabora.service=collabora"
       - "traefik.http.services.collabora.loadbalancer.server.port=9980"
     logging:
-      driver: "local"
+      driver: ${LOG_DRIVER:-local}
     restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9980/hosting/discovery"]
 
   onlyoffice:
     image: onlyoffice/documentserver:7.5.0
@@ -238,8 +245,10 @@ services:
       - "traefik.http.middlewares.onlyoffice.headers.customrequestheaders.X-Forwarded-Proto=https"
       - "traefik.http.routers.onlyoffice.middlewares=onlyoffice"
     logging:
-      driver: "local"
+      driver: ${LOG_DRIVER:-local}
     restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/hosting/discovery"]
 
   tika:
     image: ${TIKA_IMAGE:-apache/tika:latest-full}
@@ -270,7 +279,7 @@ services:
       - "traefik.http.routers.companion.service=companion"
       - "traefik.http.services.companion.loadbalancer.server.port=3020"
     logging:
-      driver: "local"
+      driver: ${LOG_DRIVER:-local}
     restart: always
 
   inbucket:
@@ -293,7 +302,7 @@ services:
       - "traefik.http.routers.inbucket.service=inbucket"
       - "traefik.http.services.inbucket.loadbalancer.server.port=9000"
     logging:
-      driver: "local"
+      driver: ${LOG_DRIVER:-local}
     restart: always
 
 volumes:
