change given step from ocs to graph

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -86,6 +86,7 @@ default:
         - TUSContext:
         - SpacesTUSContext:
         - GraphContext:
+        - SharingNgContext:
 
     apiArchiver:
       paths:
