Use sharingNG for sharing in given step

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -138,6 +138,7 @@ default:
         - SpacesTUSContext:
         - OcisConfigContext:
         - TrashbinContext:
+        - SharingNgContext:
 
     apiCors:
       paths:
