changing given step of creating link share in feature file

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -166,6 +166,7 @@ default:
         - PublicWebDavContext:
         - TrashbinContext:
         - OcisConfigContext:
+        - SharingNgContext:
 
     apiAsyncUpload:
       paths:
