change given step for sharing space in apiDownloads

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -231,6 +231,7 @@ default:
         - OcisConfigContext:
         - PublicWebDavContext:
         - ArchiverContext:
+        - SharingNgContext:
 
     apiSearch1:
       paths:
