feat: drop github.com/a8m/envsubst in favor of gookit/config

--- a/deployments/examples/ocis_keycloak/config/ocis/csp.yaml
+++ b/deployments/examples/ocis_keycloak/config/ocis/csp.yaml
@@ -3,7 +3,8 @@ directives:
     - '''self'''
   connect-src:
     - '''self'''
-    - 'https://${KEYCLOAK_DOMAIN:-keycloak.owncloud.test}/'
+    # In contrary to bash and docker the default is given after the | character
+    - 'https://${KEYCLOAK_DOMAIN|keycloak.owncloud.test}/'
   default-src:
     - '''none'''
   font-src:
