--- a/deployments/examples/ocis_wopi/config/ocis/csp.yaml
+++ b/deployments/examples/ocis_wopi/config/ocis/csp.yaml
@@ -12,14 +12,16 @@ directives:
   frame-src:
     - '''self'''
     - 'https://embed.diagrams.net/'
-    - 'https://${ONLYOFFICE_DOMAIN:-onlyoffice.owncloud.test}/'
-    - 'https://${COLLABORA_DOMAIN:-collabora.owncloud.test}/'
+    # In contrary to bash and docker the default is given after the | character
+    - 'https://${ONLYOFFICE_DOMAIN|onlyoffice.owncloud.test}/'
+    - 'https://${COLLABORA_DOMAIN|collabora.owncloud.test}/'
   img-src:
     - '''self'''
     - 'data:'
     - 'blob:'
-    - 'https://${ONLYOFFICE_DOMAIN:-onlyoffice.owncloud.test}/'
-    - 'https://${COLLABORA_DOMAIN:-collabora.owncloud.test}/'
+    # In contrary to bash and docker the default is given after the | character
+    - 'https://${ONLYOFFICE_DOMAIN|onlyoffice.owncloud.test}/'
+    - 'https://${COLLABORA_DOMAIN|collabora.owncloud.test}/'
   manifest-src:
     - '''self'''
   media-src:
