Use sharingNG for sharing in given step, refactored accordingly

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -121,6 +121,7 @@ default:
         - SpacesTUSContext:
         - OcisConfigContext:
         - TrashbinContext:
+        - SharingNgContext:
 
     apiGraphUserGroup:
       paths:
