--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -168,6 +168,7 @@ default:
         - PublicWebDavContext:
         - TrashbinContext:
         - OcisConfigContext:
+        - SharingNgContext:
 
     apiAsyncUpload:
       paths:
