dateSearch.feature: Used sharingNG for sharing in given step

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -251,6 +251,7 @@ default:
         - TagContext:
         - TUSContext:
         - WebDavPropertiesContext:
+        - SharingNgContext:
 
     apiSearch2:
       paths:
