--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -269,6 +269,7 @@ default:
         - SpacesTUSContext:
         - TagContext:
         - TUSContext:
+        - SharingNgContext:
 
     apiSearchContent:
       paths:
