Used sharingNG for sharing in given step

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -290,6 +290,7 @@ default:
         - SpacesTUSContext:
         - TUSContext:
         - OcisConfigContext:
+        - SharingNgContext:
 
     apiReshare:
       paths:
