changingFilesShare.feature: Used sharingNG for sharing in given step

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -69,6 +69,7 @@ default:
         - ArchiverContext:
         - GraphContext:
         - OcisConfigContext:
+        - SharingNgContext:
 
     apiContract:
       paths:
