feat: add maximum image dimension to be processed by the thumbnailer (#9035)
* feat: add maximum image dimension to be processed by the thumbnailer

* chore: make golangci-lint happy

--- a/services/_includes/thumbnails-config-example.yaml
+++ b/services/_includes/thumbnails-config-example.yaml
@@ -47,3 +47,5 @@ thumbnail:
   font_map_file: ""
   transfer_secret: ""
   data_endpoint: http://127.0.0.1:9186/thumbnails/data
+  max_input_width: 7680
+  max_input_height: 4320
