updating given step for sharing

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -320,6 +320,7 @@ default:
         - SpacesContext:
         - WebDavLockingContext:
         - PublicWebDavContext:
+        - SharingNgContext:
 
     apiSharingNg:
       paths:
