updating given step for sharing and env in docs for starting email service

--- a/tests/acceptance/docker/src/ocis-base.yml
+++ b/tests/acceptance/docker/src/ocis-base.yml
@@ -35,6 +35,7 @@ services:
       NOTIFICATIONS_SMTP_HOST: email
       NOTIFICATIONS_SMTP_PORT: 2500
       NOTIFICATIONS_SMTP_INSECURE: "true"
+      NOTIFICATIONS_SMTP_SENDER: "owncloud <noreply@example.com>"
 
       # antivirus
       ANTIVIRUS_SCANNER_TYPE: "clamav"
