--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -198,6 +198,7 @@ default:
         - FilesVersionsContext:
         - SettingsContext:
         - OcisConfigContext:
+        - SharingNgContext:
 
     apiAntivirus:
       paths:
