feat: add maximum image file size to be processed by the thumbnailer (#9069)

--- a/services/_includes/thumbnails-config-example.yaml
+++ b/services/_includes/thumbnails-config-example.yaml
@@ -49,3 +49,4 @@ thumbnail:
   data_endpoint: http://127.0.0.1:9186/thumbnails/data
   max_input_width: 7680
   max_input_height: 4320
+  max_input_image_file_size: 50MB
