changing given from ocs to graph in favoritesSharingToShares feature file

--- a/tests/acceptance/config/behat-core.yml
+++ b/tests/acceptance/config/behat-core.yml
@@ -50,6 +50,7 @@ default:
         - FeatureContext: *common_feature_context_params
         - FavoritesContext:
         - WebDavPropertiesContext:
+        - SharingNgContext:
 
     coreApiShareCreateSpecialToShares1:
       paths:
